# r0-zig-factors

./: .gitignore  Cargo.toml  Makefile
guest/: build.zig  linker.ld
guest/src/: main.zig
host/: Cargo.toml
host/src/: main.rs
