[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
risc0-zkvm = { version = "0.19", features = ["prove"] }
# risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "b35e1faa37fb4b60cf8dd849cf46b14d1713c881" }
serde = "1.0"
# risc0-binfmt = { git = "https://github.com/risc0/risc0.git", rev = "b35e1faa37fb4b60cf8dd849cf46b14d1713c881" }
risc0-binfmt = { version = "0.19" }
